前置判断 Field 的值,减少代码执行量